displayName fix begin work on content aligning

--- a/public/global.css
+++ b/public/global.css
@@ -71,6 +71,7 @@ button:focus {
 	flex-direction: column;
 	padding: 10px;
 	margin: 10px;
+	width: fit-content;
 	max-width: 66vw;
 	border-radius: 15px;
 }
@@ -85,15 +86,15 @@ button:focus {
 }
 .send {
 	position: fixed;
-	bottom: 0;
-	right: 0;
+	bottom: 5px;
+	right: 10px;
 	border-radius: 15px;
 }
 .message-bar {
 	border-radius: 15px;
 	position: fixed;
-	bottom: 0;
-	left: 0;
+	bottom: 5px;
+	left: 10px;
 	width: 80vw;
 }
 .auth-form {
@@ -113,4 +114,11 @@ code {
 }
 .chat-box {
 	padding-bottom: 55px;
+}
+.sign-in {
+	display: none;
+}
+.my-message {
+	float: right;
+	clear: both;
 }
